# MockupFace

./: ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/common/: constants.rs  enums.rs  error.rs  mod.rs
backend/src/controllers/: images_controller.rs  mod.rs  ocr_controller.rs  pipeline_controller.rs  prompts_controller.rs  qa_controller.rs  rag_controller.rs
backend/src/models/: mockup.rs  mod.rs  ocr.rs  pipeline.rs
backend/src/repository/: mod.rs  pgvector_repository.rs
backend/src/routes/: mod.rs  pipeline.rs  qa.rs  rag.rs
backend/src/services/: claude_service.rs  dalle_service.rs  http_service.rs  mod.rs  ocr_service.rs  qa_service.rs
frontend/: package.json
frontend/src/components/: PipelineLog.jsx
frontend/src/hooks/: useApiKeys.js
mockupface-repo/mockupface-mvp/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE
mockupface-repo/mockupface-mvp/.github/workflows/: ci.yml
mockupface-repo/mockupface-mvp/backend/: .env.example  Cargo.toml  schema.sql
mockupface-repo/mockupface-mvp/backend/src/: main.rs
mockupface-repo/mockupface-mvp/backend/src/routes/: images.rs  ocr.rs  prompts.rs
mockupface-repo/mockupface-mvp/frontend/: index.html
mockupface-repo/mockupface-mvp/frontend/src/: App.jsx  canvasRenderer.js  constants.js
mockupface-repo/mockupface-mvp/frontend/src/components/: DropZone.jsx  KeyPanel.jsx  MockupCard.jsx
