[package]
name    = "mockupface-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mockupface"
path = "src/main.rs"

[dependencies]
axum            = { version = "0.7", features = ["multipart"] }
tokio           = { version = "1",   features = ["full"] }
tower-http      = { version = "0.5", features = ["cors", "trace"] }
sqlx            = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
pgvector        = { version = "0.3", features = ["sqlx"] }
reqwest         = { version = "0.11", features = ["json", "multipart"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
uuid            = { version = "1",   features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
anyhow          = "1"
thiserror       = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy         = "0.15"
base64          = "0.21"
bytes           = "1"
tempfile        = "3"
